--- a/src/sample/view/Main.fxml
+++ b/src/sample/view/Main.fxml
@@ -8,7 +8,10 @@
       <Label fx:id="label" layoutX="156.0" layoutY="146.0" text="USUARI:" />
       <Label layoutX="156.0" layoutY="203.0" text="CONTRASENYA:" />
       <TextField fx:id="nom" layoutX="310.0" layoutY="140.0" />
-      <TextField fx:id="password" layoutX="310.0" layoutY="198.0" />
+      <PasswordField fx:id="pass_hidden" layoutX="310.0" layoutY="198.0" />
+      <TextField fx:id="password" layoutX="310.0" layoutY="198.0" visible="false"/>
       <Button layoutX="279.0" layoutY="278.0" mnemonicParsing="false" onAction="#comprovaUsuari" text="Ok" />
+      <Button fx:id="veurePass" layoutX="500.0" layoutY="198.0" mnemonicParsing="false" onAction="#showPass" text="Mostra" />
+
    </children>
 </Pane>
