--- a/src/sample/view/usuariBusca.fxml
+++ b/src/sample/view/usuariBusca.fxml
@@ -9,11 +9,11 @@
 
         <TextField fx:id="idBusca" layoutX="310.0" layoutY="55.0" onAction="#buscaUsuari" />
         <TextField fx:id="id" disable="true" layoutX="310.0" layoutY="100.0" />
-        <TextField fx:id="nom" editable="false" layoutX="310.0" layoutY="130.0" />
-        <TextField fx:id="pass" editable="false" layoutX="310.0" layoutY="210.0" />
-        <TextField fx:id="rol" editable="false" layoutX="310.0" layoutY="250.0" />
+        <TextField fx:id="nom" disable="true" layoutX="310.0" layoutY="130.0" />
+        <TextField fx:id="pass" disable="true" layoutX="310.0" layoutY="210.0" />
+        <TextField fx:id="rol" disable="true" layoutX="310.0" layoutY="250.0" />
         <Button layoutX="347.0" layoutY="325.0" mnemonicParsing="false" onAction="#optBotons" text="Tornar" />
-        <Button layoutX="277.0" layoutY="325.0" mnemonicParsing="false" onAction="#optBotons" text="Editar" />
+        <Button fx:id="editar" layoutX="277.0" layoutY="325.0" mnemonicParsing="false" onAction="#optBotons" text="Editar" />
         <Label layoutX="200.0" layoutY="100.0" text="Id:" />
         <Label layoutX="200.0" layoutY="130.0" text="Nom:" />
         <Label layoutX="200.0" layoutY="210.0" text="Password:" />
