--- a/src/sample/view/usuariNou.fxml
+++ b/src/sample/view/usuariNou.fxml
@@ -11,11 +11,13 @@
       <Label layoutX="200.0" layoutY="210.0" text="Rol" />
 
       <TextField fx:id="nom" layoutX="318.0" layoutY="90.0" />
-      <TextField fx:id="pass" layoutX="318.0" layoutY="170.0" />
+      <TextField fx:id="pass" layoutX="318.0" layoutY="170.0" visible="false" />
+      <PasswordField fx:id="pass_hidden" layoutX="318.0" layoutY="170.0" />
       <ChoiceBox fx:id="rol" layoutX="318.0" layoutY="205.0" prefWidth="170.0" />
       <Label fx:id="labelOk" />
       <Button layoutX="344.0" layoutY="305.0" mnemonicParsing="false" onAction="#optBotons" text="Tornar" />
       <Button layoutX="266.0" layoutY="305.0" mnemonicParsing="false" onAction="#optBotons" text="Ok" />
+      <Button fx:id="veurePass" layoutX="500.0" layoutY="170.0" mnemonicParsing="false" onAction="#showPass" text="Mostra" />
       <Label layoutX="242.0" layoutY="31.0" text="NOU USUARI">
          <font>
             <Font size="24.0" />
