--- a/src/sample/view/espaiNou.fxml
+++ b/src/sample/view/espaiNou.fxml
@@ -30,7 +30,7 @@
 
         <Label fx:id="labelOk" />
         <Button layoutX="344.0" layoutY="305.0" mnemonicParsing="false" onAction="#optBotons" text="Tornar" />
-        <Button layoutX="266.0" layoutY="305.0" mnemonicParsing="false" onAction="#optBotons" text="Següent" />
+        <Button layoutX="266.0" layoutY="305.0" mnemonicParsing="false" onAction="#optBotons" text="Seguent" />
         <Button fx:id="ok" layoutX="200.0" layoutY="305.0" mnemonicParsing="false" onAction="#optBotons" text="Ok" />
 
         <Label layoutX="242.0" layoutY="31.0" text="NOU ESPAI">
