--- a/src/sample/view/suggerimentNou.fxml
+++ b/src/sample/view/suggerimentNou.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<Pane prefHeight="450.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.SuggerimentNouController">
+<Pane prefHeight="450.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.SuggerimentNouController">
    <children>
       <Label layoutX="200.0" layoutY="124.0" text="Id espai" />
       <Label layoutX="200.0" layoutY="159.0" text="Id planta" />
@@ -19,7 +16,7 @@
       <ChoiceBox fx:id="idE" layoutX="318.0" layoutY="120.0" prefWidth="170.0" />
       <ChoiceBox fx:id="idP" layoutX="318.0" layoutY="155.0" prefWidth="170.0" />
       <ChoiceBox fx:id="idH" layoutX="318.0" layoutY="188.0" prefWidth="170.0" />
-      <Label fx:id="nI" layoutX="318.0" layoutY="225.0" prefHeight="17.0" prefWidth="60.0" />
+      <Label fx:id="nI" layoutX="318.0" layoutY="225.0" prefHeight="17.0" prefWidth="170.0" />
       <ChoiceBox fx:id="idI" layoutX="318.0" layoutY="248.0" prefWidth="170.0" />
       <DatePicker fx:id="dE" layoutX="318.0" layoutY="281.0" />
       <DatePicker fx:id="dS" layoutX="318.0" layoutY="313.0" />
