--- a/src/sample/view/usuariNou.fxml
+++ b/src/sample/view/usuariNou.fxml
@@ -12,7 +12,7 @@
 
       <TextField fx:id="nom" layoutX="318.0" layoutY="90.0" />
       <TextField fx:id="pass" layoutX="318.0" layoutY="170.0" visible="false" />
-      <PasswordField fx:id="pass_hidden" layoutX="318.0" layoutY="170.0" />
+      <PasswordField fx:id="pass_hidden" layoutX="318.0" layoutY="170.0" onKeyPressed="#copia" />
       <ChoiceBox fx:id="rol" layoutX="318.0" layoutY="205.0" prefWidth="170.0" />
       <Label fx:id="labelOk" />
       <Button layoutX="344.0" layoutY="305.0" mnemonicParsing="false" onAction="#optBotons" text="Tornar" />
